# agentic_testing_framework

./: .gitignore  BUILD.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agentic_testing_framework/: __init__.py  api.py  cli.py  py.typed
agentic_testing_framework/core/: __init__.py  case.py  finding.py  ledger.py  llm.py  metrics.py  models.py  parsing.py  roles.py  types.py
agentic_testing_framework/generator/: __init__.py  adaptive.py  adversarial.py  mutation.py  spec.py
agentic_testing_framework/metaeval/: __init__.py  agreement.py  baseline.py  dataset.py  gaming.py  runner.py
agentic_testing_framework/metrics/: __init__.py  answer_relevancy.py  base.py  faithfulness.py  g_eval.py  hallucination.py  registry.py  suite.py  toxicity.py
agentic_testing_framework/prompts/: __init__.py  registry.py
agentic_testing_framework/providers/: __init__.py  anthropic.py  base.py  cache.py  claude_cli.py  mock.py  registry.py
agentic_testing_framework/regression/: __init__.py  golden.py  runner.py
agentic_testing_framework/reporting/: __init__.py  html.py  junit.py  suite.py
agentic_testing_framework/targets/: __init__.py  base.py  cli.py  function.py  http.py  prompt.py  runner.py
agentic_testing_framework/tribunal/: __init__.py  _judging.py  checks.py  clerk.py  council.py  orchestrator.py  (+2 more)
examples/: cases.json  github-actions-eval.yml  golden.json  sql_case.py
tests/: test_adaptive.py  test_adversarial_loop.py  test_advisory.py  test_api.py  test_cache.py  test_checks.py  test_checks_extra.py  test_claude_cli.py  test_clerk_gating.py  test_cli.py  test_core.py  test_cost.py  test_council.py  test_generator.py  test_invariants.py  test_live_providers.py  test_metaeval.py  test_metrics.py  test_no_deps.py  test_orchestrator.py  test_pipeline.py  test_prompts.py  test_providers.py  test_regression.py  test_reporting.py  test_reviewer.py  test_suite.py  test_targets.py  test_targets_errors.py
(+6 files in other folders)
