[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-testing-framework"
version = "0.1.0"
description = "An adversarial test harness for AI agents, with an auditable evaluation tribunal."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Drew Wasem" }]
keywords = ["llm", "evaluation", "testing", "agents", "adversarial", "red-team"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Testing",
]
# Zero required dependencies in the core — model SDKs are optional and lazily loaded.
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.39"]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.8"]

[project.scripts]
atf = "agentic_testing_framework.cli:main"

[project.urls]
Homepage = "https://github.com/DrewWasem/agentic_testing_framework"
Repository = "https://github.com/DrewWasem/agentic_testing_framework"

[tool.setuptools.packages.find]
include = ["agentic_testing_framework*"]

[tool.setuptools.package-data]
# Ship the PEP 561 marker so downstream consumers get the inline types.
agentic_testing_framework = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ["agentic_testing_framework"]

[[tool.mypy.overrides]]
# The SDK is an optional, lazily-imported extra; don't require stubs for type-checking the core.
module = ["anthropic", "anthropic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
